# timereporter

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  appveyor.yml  calendar.py  callgraph.py  camel_registry.py  conftest.py  day.py  mydatetime.py  pyproject.toml  requirements.txt  setup.py  timeparser.py  timereporter.py  travis.yml  workcalendar.py
.github/workflows/: python-app.yml
test/: conftest.py  test_alias.py  test_bugs.py  test_calendar.py  test_calendar_printer.py  test_date_arg_parser.py  test_day.py  test_main.py  test_mydatetime.py  test_mytimedelta.py  test_timeparser.py  test_timereporter.py  test_workcalendar.py
test/_fixtures/: alias.yaml  crash.yaml  minimal.yaml  wrong_sum.yaml
test/commands/: test_command.py  test_project_command.py  test_show.py  test_show_flex_command.py  test_time_reporter_command.py  test_undo.py
test/controllers/: test_project_controller.py  test_time_reporter_controller.py
test/views/: test_browser_month_view.py  test_console_month_view.py  test_day_shower.py
timereporter/: README.md  __init__.py  __main__.py  calendar.py  calendar_printer.py  camel_registry.py  date_arg_parser.py  day.py  mydatetime.py  project.py  timeparser.py  timereporter.py  workcalendar.py
timereporter/commands/: alias_command.py  command.py  command_factory.py  project_command.py  redo_command.py  show_command.py  show_commands.py  time_reporter_command.py  undo_command.py
timereporter/controllers/: controller.py  controller_factory.py  project_controller.py  redo_controller.py  show_controller.py  undo_controller.py  (+1 more)
(+11 files in other folders)
