[tool.black]
line-length = 88

[tool.poetry]
name = "timereporter"
version = "0.1.2"
description = "Report working time from the command line."
authors = ["Filip Lange <filip.lange@gmail.com>"]
repository = "https://github.com/Godsmith/timereporter"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.2"
tabulate = ">=0.7.7"
camel = ">=0.1.2"
colorama = ">=0.4.1"

[tool.poetry.dev-dependencies]
pytest = ">=3.2.3"
pytest-cov = ">=2.5.1"
pytest-mock = ">=1.6.3"
black = {extras = ["d"], version = "^21.5b0"}
mypy = "^0.812"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
